# co-founder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  todos.md
.cursor/rules/: frontend-patterns.mdc  learnings.mdc  project-context.mdc
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_adapter.rs  commands.rs  crypto.rs  daily_report.rs  db.rs  event_translator.rs  heartbeat.rs  lib.rs  main.rs  models.rs  process_pool.rs  state_manager.rs  telegram_bridge.rs  work_session.rs
src/components/: FeedbackModal.tsx  FriendlyError.tsx  IntegrationsPanel.tsx  Sidebar.tsx  TelegramPanel.tsx  UpdateNotification.tsx
src/components/agent-detail/: ArtifactsTab.tsx  BehaviorTab.tsx  DeliverablesTab.tsx  InboxTab.tsx  OverviewTab.tsx  ReportsTab.tsx  ScheduleTab.tsx  SettingsTab.tsx  ToolsTab.tsx
src/hooks/: useAgents.ts  useNotifications.ts  useUpdater.ts
src/lib/: api.ts  formatTime.ts  friendlyErrors.ts  heartbeatTemplate.ts  imageUtils.ts  templates.ts  wizardConstants.ts
src/types/: index.ts
src/views/: AgentDetailView.tsx  CreateAgentView.tsx  HomeView.tsx  ImportAgentView.tsx  JourneyExportView.tsx  LiveSessionView.tsx  OnboardingView.tsx  PairView.tsx  SettingsView.tsx  SetupView.tsx
