[package]
name = "agent-founder"
version = "0.2.4"
description = "Co-Founder — autonomous AI builder powered by Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_founder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
libc = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["multipart"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
